<resources>
    <string name="app_name">Business Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="go">GO</string>
    <string name="total_bal">Total available balance:</string>
    <string name="total_market">Total credit in market:</string>
    <string name="today_work">Work value</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="today">Today</string>
    <string name="this_month">This Month</string>
    <string name="name">Name</string>
    <string name="service_name">Service name</string>
    <string name="service_unit">Service unit</string>
    <string name="service_rate">Service rate</string>
    <string name="applied_from">Rate applied from</string>
    <string name="applied_to">Rate applied to</string>
    <string name="discontinue">Discontinue</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
</resources>
